<resources>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="model_not_available">Model Not Available</string>
    <string name="push_info">Push Info</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="dji_api_key">e04824976770c6fc1e2fafcb</string>

    <string name="app_name">Vanttec UAV</string>
    <string name="title_activity_maps">UAV</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="location_permission_denied">Ubicación denegada</string>
    <string name="permission_rationale_location">permission_rationale_location</string>

    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_add">Add</string>
    <string name="btn_config">Configuration</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_remove">remove</string>
    <string name="btn_set_geo">set</string>

    <string-array name="map_settings">
        <item>Locate Me</item>
        <item>Locate Drone</item>
        <item>Set Destinations</item>
        <item>Set Manually Destinations</item>
        <item>Return Home</item>
        <item>Add GeoFence</item>
        <item>Add GeoFence Manually</item>
    </string-array>
    <string name="title_activity_maps2">Map</string>

</resources>
